<resources>
    <string name="app_name">C-Verde</string>
    <string name="register">register</string>
    <string name="email">email</string>
    <string name="password">password\n</string>
    <string name="click_to_login">click_to_login</string>
    <string name="Firstname">Firstname</string>
    <string name="Do_have_an_account_Login">Do you have an Account? Login</string>
    <string name="Confirmpassword">Confirm Password</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Lastname">Lastname</string>
    <string name="SignUp">Sign Up</string>
    <string name="I_agree_to_the_Terms_and_Conditions">I Agree to the Terms And Conditions</string>
    <string name="terms_conditions_description">I Agree to the Terms And Condition</string>
    <string name="login">Login</string>
    <string name="click_tologin">Dont You Have an Account? Register</string>
    <string name="clicktologin">Dont You Have Account? Register</string>
    <string name="reg">Don\'t have an account? Register</string>
    <string name="google_sign_in">Google</string>
    <string name="remember_me">Remember Me</string>
    <string name="Logout">Logout</string>
    <string name="logo">Logo</string>
    <string name="forgot">Forgot Password</string>
    <string name="forgotpass">Forgot your password?</string>
    <string name="default_web_client_id" />
    <string name="forgotpassword">Forgot Password?</string>
    <string name="calulate">CALCULATE</string>
    <string name="description">Take responsibility of your environmental footprint and support initiatives for global sustainability, your small steps can lead to a big impact.</string>
    <string name="logo_description">LOGO</string>
    <string name="questions">Do you own a television?</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="howmanyTV">How many do you have?</string>
    <string name="HM_TV">How many do you have?</string>
    <string name="Username">Username</string>
    <string name="Email_Uname">Email/Username</string>
    <string name="nextbtn">Next</string>
    <string name="Efan">Electricfan(s)</string>
    <string name="Ac">Aircondition(s)</string>
    <string name="question1">"Your daily calculated distance \nfrom home to Quezon City \nUniversity (in km.)</string>
    <string name="question2">"How many meals do you consume on campus\n per week? (in kg.)</string>
    <string name="question3">" How often do you leave food uneaten or discard leftovers?\n(in kg.)</string>
    <string name="WTG">WAY TO GO!</string>
    <string name="guideRB">Drag the slider to proceed</string>
    <string name="questionoften">1 - Never\n2 - Rarely\n3 - Sometimes\n4 - Often\n5 - Always</string>
    <string name="student_id">Student Number</string>
    <string name="Never">Never</string>
    <string name="Rarely">Rarely</string>
    <string name="SomeT">Sometimes</string>
    <string name="Often">Often</string>
    <string name="Always">Always</string>
    <string name="home">Home\n</string>
    <string name="footprint">Footprint</string>
    <string name="rewards">Rewards\n</string>
    <string name="profile">Profile</string>
    <string name="about">About\n</string>
    <string name="what">What YOU can do</string>
    <string name="bike">Change the way you travel</string>
    <string name="bikes">Embracing sustainable transportation practices is key for reducing carbon footprints. Opting for greener alternatives like walking, biking to campus, carpooling, and using public transportation can significantly reduce emissions.</string>
    <string name="energy">Reduce your energy</string>
    <string name="energys">Lorem ipsum dolor sit amet,  consectetur adipiscing elit,  sed do eiusmod tempor.</string>
    <string name="eat">Change what you eat</string>
    <string name="eats">One of the most beneficial actions you can take for the planet is to significantly adopting a healthy and balanced diet that includes a greater variety of plant-based foods, sourcing meat and fish from...</string>
    <string name="wastes">Reduce food waste</string>
    <string name="wastess">Lorem ipsum dolor sit amet, consectetur dipiscing elit, sed do eiusmod tempor. jsnncnjsncudcnccnsnksmxx\n</string>
    <string name="supportss">SUPPORT SUSTAINABILITY.\nCUT CARBON.\nGAIN REWARDS!</string>
    <string name="enterprise">Enterprises and Discounts</string>
    <string name="textssss">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</string>
    <string name="cverde">C Verde is an innovative platform that empower individuals and enterprises to take part in top-tier carbon activities.</string>
    <string name="learn">Learn More</string>
    <string name="action">Your actions are \nharming the environment.</string>
    <string name="foodwaste">Food Waste</string>
    <string name="kgss">10 kgs</string>
    <string name="thankyou">Thank you for making the effort to stay green!</string>
    <string name="food">Food</string>
    <string name="kgs">80 kgs</string>
    <string name="name">Hello, Juan Dela Cruz</string>
    <string name="text">You have emitted  120 kg CO2 this week</string>
    <string name="breakdown">Breakdown\n</string>
    <string name="c">About C Verde</string>
    <string name="bikers" />
    <string name="masugid_icon" />
    <string name="masugident">Masugid Enterprise</string>
    <string name="q1">\n</string>
    <string name="guideq3">Choose one to continue</string>
    <string name="foodlogo" />
    <string name="challanges">Challanges</string>
    <string name="SemiQq1">Select your primary mode of transportation</string>
    <string name="Bus">Bus</string>
    <string name="Jeep">Jeep</string>
    <string name="Car">Car</string>
    <string name="Motor">Motorcycle</string>
    <string name="Tricycle">Tricycle</string>
    <string name="q1next">Next</string>
    <string name="subtitle">Start by answering a few questions. \nYour responses will give us a rough estimate of your carbon emissions. \n\nRemember, there are no right or wrong answers. It’s not about perfection \nbut about guiding your next steps for action. \n\nReady?</string>
    <string name="WTGnote">Thank you for your answers! \nYour insights will help us understand your \nimpact and guide you in reducing\n your carbon footprint. \n\nLet’s keep making a difference together!</string>
    <string name="savequest">Save Changes</string>
    <string name="MasugidIcon">\n</string>
    <string name="MasugidEnt">Masugid Enterprise</string>
    <string name="WaniEnt">\n</string>
    <string name="playmakerEnt">\n</string>
    <string name="hello">Hello there!</string>
    <string name="machuritto">"Machuritto"</string>
    <string name="enqEnt">Enquiries can be directed to:</string>
    <string name="masugidIG">\@masugid_enterprise</string>
    <string name="mas_email">masugidenterprise2b@gmail.com</string>
    <string name="masugidtitle">Masugid Enterprise</string>
    <string name="Wani">Wani Enterprise</string>
    <string name="sawaff">“Sa-WAFF Panalo”</string>
    <string name="waniIG">\@wanienterprise</string>
    <string name="wani_num">0951-003-5060</string>
    <string name="waniPhone">\n</string>
    <string name="wanipic">\n</string>
    <string name="wanilogo">\n</string>
    <string name="playmlogo">\n</string>
    <string name="playm_fb">Playmaker Enterprise</string>
    <string name="playmtitle">Playmaker Enterprise</string>
    <string name="jackofpie">“Langka-Tulad, Langka-Pantay at \nLangkasing-Sarap na Jack of Pie”</string>
    <string name="challenge_home">Challenge yourself now!</string>
    <string name="homepagedesc">C-Verde collaborates with Masugid, Wani, and Playmaker to promote sustainability through user engagement. Users can earn discounts or vouchers by participating in challenges and when users reach specific carbon emission reduction goals. The potential larger discounts are redeemable green products from the enterprises.</string>
    <string name="termsacondition"><![CDATA[<![CDATA[Privacy & Terms]]></string>
    <string name="noone">1. Acceptance of Terms</string>
    <string name="termsandcondition"><![CDATA[Privacy & Terms]]></string>
    <string name="textfour">Ensuring that the information you provide is accurate and up-to-date. Regularly updating the app to benefit from new features and improvements.</string>
    <string name="nofour">4. User Responsibilities You are responsible for:</string>
    <string name="textthree">C-Verde collects and processes personal information, such as your daily activities, energy usage, and travel habits, to calculate your carbon footprint.</string>
    <string name="nothree">3. Data Collection and Privacy</string>
    <string name="texttwo">Avoid any unauthorized access, tampering, or reverse engineering of the application.</string>
    <string name="texttwos">• Use the app for lawful purposes and in compliance with all applicable laws.</string>
    <string name="texttwosss">• Provide accurate data regarding your activities to ensure accurate carbon footprint tracking.</string>
    <string name="txttwo">C-Verde is a carbon footprint tracker that allows users to monitor and reduce their environmental impact. By using the application, you agree to:</string>
    <string name="notwo">2. Use of the Application</string>
    <string name="textone">By downloading, installing, or using the C-Verde application, you agree to be bound by these Terms and Conditions. If you do not agree to these terms, please do not use the application.</string>
    <string name="lastname">Last Name</string>
    <string name="points">POINTS: 85</string>
    <string name="collects">Collect points to redeem special awards</string>
    <string name="totalcarbs">Your Total Carbon Footprint:</string>
    <string name="totalcarbon">0.00 g CO₂</string>
    <string name="Walk">Walking</string>
    <string name="Bikebtn">Bike</string>
    <string name="log_out">LOGOUT</string>
    <string name="aboutcv">About\nC-Verde</string>
    <string name="cv_fb">C-Verde</string>
    <string name="cv_email">c.verde0101@gmail.com</string>
    <string name="cv_gmail">\n</string>
    <string name="cvpic">\n</string>
    <string name="cv_des">\n</string>
    <string name="abouts">" C-Verde is an innovative mobile application designed to help individuals monitor and reduce their carbon footprint in an accessible way. By tracking daily activities like transportation, electricity usage, food consumption, and waste generation, "</string>
    <string name="pics">\n</string>
    <string name="fwastes"><![CDATA[To reduce food waste, start by planning your meals and creating a grocery list to avoid impulse buys. Store food properly in airtight containers, and label leftovers with dates. Practice portion control when serving meals and get creative with leftovers.]]></string>
    <string name="challengesM">Your Challenges</string>
    <string name="challengesD">Take daily actions to reduce your carbon footprint, earn rewards for each completed challenge, and build sustainable habits. Let’s create a greener future together!</string>
    <string name="inprogress">In Progress</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="completed">COMPLETED</string>
    <string name="day2">Day 2:  Unplug for Energy Savings</string>
    <string name="day1text">Challenge Goal: Reduce your carbon footprint by choosing plant-based meals instead of meat.</string>
    <string name="wanidesc">"                                run by Quezon City University (QCU) students, offers unique, savory waffles for an affordable 25 pesos each. With flavors like asado and adobo, the business blends Filipino-inspired tastes with the popular waffle format, aiming to provide a satisfying and budget-friendly snack for students and the local community."</string>
</resources>