<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BGreen"
    android:padding="16dp">

    <!-- Header with ImageView and TextView -->
    <LinearLayout
        android:id="@+id/transLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:contentDescription="@string/q1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/transportation"
            app:tint="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/afacad"
            android:text="Transportation"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/TransPic"
        android:layout_width="290dp"
        android:layout_height="290dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/q1pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transLayout" />

    <TextView
        android:id="@+id/SemiQ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppinsregular"
        android:gravity="center"
        android:text="@string/SemiQq1"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TransPic" />

    <LinearLayout
        android:id="@+id/CbxQ1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SemiQ1">

        <CheckBox
            android:id="@+id/checkboxBus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/q3choices"
            android:fontFamily="@font/poppinsregular"
            android:paddingStart="10dp"
            android:text="@string/Bus"
            android:textColor="#000000" />

        <CheckBox
            android:id="@+id/checkboxJeep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/q3choices"
            android:fontFamily="@font/poppinsregular"
            android:paddingStart="10dp"
            android:text="@string/Jeep"
            android:textColor="#000000" />

        <CheckBox
            android:id="@+id/checkboxCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/q3choices"
            android:fontFamily="@font/poppinsregular"
            android:paddingStart="10dp"
            android:text="@string/Car"
            android:textColor="#000000" />

        <CheckBox
            android:id="@+id/checkboxTric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/q3choices"
            android:fontFamily="@font/poppinsregular"
            android:paddingStart="10dp"
            android:text="@string/Tricycle"
            android:textColor="#000000" />

        <CheckBox
            android:id="@+id/checkboxMotor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/q3choices"
            android:fontFamily="@font/poppinsregular"
            android:paddingStart="10dp"
            android:text="@string/Motor"
            android:textColor="#000000" />

        <CheckBox
            android:id="@+id/checkboxBike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/q3choices"
            android:fontFamily="@font/poppinsregular"
            android:paddingStart="10dp"
            android:text="@string/Bikebtn"
            android:textColor="#000000" />

        <CheckBox
            android:id="@+id/checkboxWalk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/q3choices"
            android:fontFamily="@font/poppinsregular"
            android:paddingStart="10dp"
            android:text="@string/Walk"
            android:textColor="#000000" />
    </LinearLayout>

    <Button
        android:id="@+id/q1btn"
        android:layout_width="84dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/q1btn"
        android:fontFamily="@font/afacad"
        android:text="@string/q1next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CbxQ1" />

</androidx.constraintlayout.widget.ConstraintLayout>
